--- a/src/app/ui-components/viewers/code-viewer/code-viewer.component.html
+++ b/src/app/ui-components/viewers/code-viewer/code-viewer.component.html
@@ -1,13 +1,15 @@
-<mat-expansion-panel class='viewer' 
-		(opened)="panelOpenState = true" 
-		(closed)="panelOpenState = false"
-		[expanded]="panelOpenState">
-  	<mat-expansion-panel-header>
-	    <mat-panel-title class='header'>
-	      <div class='header'>Code Viewer</div>
-	    </mat-panel-title>
-  	</mat-expansion-panel-header>
-	<div class='container'>
+<div class="viewer">
+	
+	<div class="header">
+		
+		<div class="title">Code</div>
+
+		<div class="buttons"></div>
+
+	</div>
+
+	<div class="container">
 		<div ace-editor [(text)]="code" style='min-height: 300px;'></div>
 	</div>
-</mat-expansion-panel>
+
+</div>
