--- a/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.html
+++ b/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.html
@@ -1,10 +1,14 @@
-<mat-expansion-panel class='viewer' [class.hidden]="false">
-  	<mat-expansion-panel-header>
-	    <mat-panel-title class='header'>
-	      <div class='header'>Geometry Viewer</div>
-	    </mat-panel-title>
-  	</mat-expansion-panel-header>
-	<div class='container'>
+<div class="viewer">
+	
+	<div class="header">
+		
+		<div class="title">Geometry</div>
+
+		<div class="buttons"></div>
+
+	</div>
+
+	<div class="container">
 		<ul>
 	    	<li *ngFor="let node of _nodes">
 	    		<!-- {{  getGeometry(node) }} -->
@@ -18,4 +22,5 @@
 	  	</ul>
 		<div id="app-geometry-viewer"></div>
 	</div>
-</mat-expansion-panel>
+
+</div>
