--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,9 @@
-$toolbar-color: #ADADAD;
-$toolbar-height: 30px;
+$toolbar-color: #F7F7F7;
+$toolbar-height: 45px;
 
-$default-padding: 5px 5px;
+$default-padding: 5px 15px;
 
 $heading-3: 16px;
 $default-item-spacing: 10px;
+
+$background-color: #EDEDED; 
