--- a/src/app/ui-components/controls/flowchart-controls/flowchart-controls.component.html
+++ b/src/app/ui-components/controls/flowchart-controls/flowchart-controls.component.html
@@ -1,16 +1,20 @@
-<mat-expansion-panel class='viewer' 
-		(opened)="panelOpenState = true" 
-		(closed)="panelOpenState = false"
-		[expanded]="panelOpenState">
-  	<mat-expansion-panel-header>
-	    <mat-panel-title class='header'>
-	      <div class='header'>Flowchart Controls</div>
-	    </mat-panel-title>
-  	</mat-expansion-panel-header>
-	<div class='container'>
-		<button (click)="newfile()">New File</button>
-		<button type="submit" (click)="loadFile()">Load File</button>
-		<button (click)="execute()">Run Code</button>
-		<button (click)="save()">Save Flowchart</button>
+<!--- Not in use -->
+<div class="viewer">
+	
+	<div class="header">
+		
+		<div class="title">Flowchart Controls</div>
+		<div class="buttons">
+			<button (click)="newfile()">New File</button>
+			<button type="submit" (click)="loadFile()">Load File</button>
+			<button (click)="execute()">Run Code</button>
+			<button (click)="save()">Save Flowchart</button>
+		</div>
+
 	</div>
-</mat-expansion-panel>
+
+	<div class="container">
+		
+	</div>
+
+</div>
