--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
@@ -1,15 +1,14 @@
-<mat-expansion-panel class='viewer'  [class.hidden]="!isVisible" [expanded]="true">
-  	<mat-expansion-panel-header>
-	    <mat-panel-title class='header'>
-	     	 Node Designer	
-					<!-- <div class='btn-group'>
-						<button (click)="addPort($event, 'input')">I</button>
-						<button (click)="addPort($event, 'output')">O</button>
-					</div> -->
-	    </mat-panel-title>
-  	</mat-expansion-panel-header>
-	<div class='container'>
+<div class="viewer">
+	
+	<div class="header">
+		
+		<div class="title">Node Designer</div>
 
+		<div class="buttons"></div>
+
+	</div>
+
+	<div class="container">
 		<h4 class="port-heading">Inputs</h4>
 		<div class='port input' *ngFor="let inp of _inputs; let i=index">
 			
@@ -60,5 +59,8 @@
 				<span class='btn btn-small' (click)='deletePort($event, "output", o)'>Delete</span>
 			</div>
 		</div>
+
 	</div>
-</mat-expansion-panel>
+
+</div>
+
