--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
@@ -1,10 +1,14 @@
-<mat-expansion-panel class='viewer' [class.hidden]="!isVisible" [expanded]="true">
-  	<mat-expansion-panel-header>
-	    <mat-panel-title class='header'>
-	      <div class='header'>Parameter Viewer</div>
-	    </mat-panel-title>
-  	</mat-expansion-panel-header>
-	<div class='container'>
+<div class="viewer">
+	
+	<div class="header">
+		
+		<div class="title">Parameter</div>
+
+		<div class="buttons"></div>
+
+	</div>
+
+	<div class="container">
 		<div class='input' *ngFor="let inp of _inputs">
 			<div class='row'>
 				<span class='label'>Name</span>
@@ -26,4 +30,5 @@
 			<!-- todo: -->
 		</div>
 	</div>
-</mat-expansion-panel>
+
+</div>
