--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,11 @@ body{
 	display: none !important;
 }
 
+
+split-gutter{
+	border: 1px solid #D4D4D4 !important;
+}
+
+split-area{
+	padding: 10px;
+}
