--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
@@ -29,6 +29,7 @@
 			<!-- ui options based on type -->
 			<!-- todo: -->
 		</div>
+		<div *ngIf='_inputs == undefined || _inputs.length == 0'> No Inputs </div>
 	</div>
 
 </div>
