--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -27,11 +27,11 @@
 		
 		.btn-group{
 			display: flex; 
-			flex-direction: row; 
-			justify-content: center;
+			flex-direction: column; 
+			justify-content: start;
 
-			height: 45px;
-			width: 100%;
+			height: 100%;
+			width: 45px;
 			background-color: #E7E7E7;
 
 			.btn{
@@ -105,22 +105,42 @@
 
 				}
 
+				.edit{
+					cursor: pointer;
+					color: blue;
+					font-size: 12px;
+				}
+
 				
 			}
 
 			.port-container{
+				display: flex; 
+				flex-direction: row; 
+				justify-content: space-around;
+
 				position: relative;
 				height: 10px;
 				width: 100%;
-				text-align: center;
 				z-index: 1;
 
+				margin-top: -2px;
+				
 				&.input{
-					margin-top: -2px;
+
+					.port{
+						border-top-right-radius: 15px;
+						border-top-left-radius: 15px;
+					}
 				}
 
 				&.output{
-					transform: rotate(180deg)
+
+					.port{
+						border-bottom-right-radius: 15px;
+						border-bottom-left-radius: 15px;
+					}
+
 				}
 
 				.port{
@@ -131,8 +151,7 @@
 					display: inline-block;
 					background-color: black;
 					margin: 0px 2px;
-					border-top-right-radius: 15px;
-					border-top-left-radius: 15px;
+					
 					z-index: 3;
 
 					&:hover{
@@ -184,3 +203,58 @@
 }
 
 
+.dialog{
+	
+	display: flex; 
+	flex-direction: column; 
+
+	position: absolute;
+	top: 80px;
+	right: 0px;
+	height: auto;
+	border: 1px solid gray;
+	background-color: #f7f7f7;
+
+	padding: 15px;
+
+	max-height: 600px;
+	width: 300px;
+	max-width: 300px;
+	overflow: auto;
+
+	.header{
+
+		.label{
+			font-size: 18px;
+			text-decoration: uppercase;
+			color: gray;
+		}
+
+		.content{
+			color: blue;
+			border-bottom: 1px dashed blue;
+			font-size: 14px;
+			margin-left: 10px;
+		}
+	}
+
+	.spacer{
+		width: 45px; 
+		height: 2px;
+		background-color: gray;
+	}
+
+	.close{
+		height: 30px;
+		width: 60px;
+		padding: 10px; 
+		font-size: 14px; 
+		text-align: center;
+	}
+
+	.row{
+		border: 1px solid #b9b0b0;
+		margin-bottom: 10px;
+		padding: 10px;
+	}
+}
