--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -71,17 +71,21 @@
 	</div>
 	
 
-
-
-</div>
-
-<div class="dialog" *ngIf="_showToolbox">
-	
-	<!-- <div class="toolbox">
-		<div *ngFor="let mod in _moduleList">
-			{{ mod }}
+	<div class="dialog" *ngIf="_showToolbox">
+		
+		<div class="toolbox">
+			<div class="fn_container">
+				<div class="fn_name" 
+					*ngFor="let fn of _moduleList">
+					{{ fn.name }}
+				</div>
+			</div>
 		</div>
-	</div> -->
 
-	<div class="close" (click)="_showToolbox=false;">Close</div>
+		<div class="close" (click)="_showToolbox=false;">Close</div>
+	</div>
+
+
+
+
 </div>
