--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -50,6 +50,34 @@
 						  )
 						</div>
 					</div>
+
+					<div *ngIf="prod.data.name == 'Action'">
+						<div class='data-node-template procedure'>
+							
+							<input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+							(change)="updateProcedure($event, prod, 'left')">
+							
+							= {{prod.data.rightExpression}} ( 
+
+							<div class="param-container" 
+								*ngFor="let p of prod.data.params; let i=index">
+								
+								<input class="tree-input"
+								 [(ngModel)]="prod.data.params[i]"
+								 #ctrl="ngModel" 
+								 required
+								 (ngModelChange)="updateProcedure($event, prod, 'right')">
+
+								<span *ngIf='i<prod.data.params.length-1'>,</span>
+								<!-- <input class="tree-input" [(ngModel)]="p" 
+								 placeholder="Input something here" 
+								 #ctrl="ngModel" required 
+								 (change)="updateProcedure($event, prod, 'right')"> --> 
+							</div>
+							) 
+							
+						</div>
+					</div>
 				
 				    <!-- <div class='btn-group'>
 				    					    <button (click)="deleteProcedure(prod)">Delete</button>
@@ -76,8 +104,9 @@
 		<div class="toolbox">
 			<div class="fn_container">
 				<div class="fn_name" 
-					*ngFor="let fn of _moduleList">
-					{{ fn.name }}
+					*ngFor="let fn of _moduleList"
+					(click)="addActionProcedure(fn); _showToolbox=false;">
+					{{ fn.module }}::{{ fn.name }}
 				</div>
 			</div>
 		</div>
