Correct code generated for action procedure

--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -63,7 +63,8 @@
 								*ngFor="let p of prod.data.params; let i=index">
 								
 								<input class="tree-input"
-								 [(ngModel)]="prod.data.params[i]"
+								 placeholder={{prod.data.params[i].type}}
+								 [(ngModel)]="prod.data.params[i].value"
 								 #ctrl="ngModel" 
 								 required
 								 (ngModelChange)="updateProcedure($event, prod, 'right')">
