--- a/src/app/ui-components/controls/main-menu/menu.component.scss
+++ b/src/app/ui-components/controls/main-menu/menu.component.scss
@@ -8,7 +8,7 @@
 	justify-content: space-between;
 
 	background-color: $toolbar-color;
-	height: $toolbar-height;
+	height: 45px;//$toolbar-height;
 	line-height: $toolbar-height;
 
 	padding: $default-padding;
