--- a/src/app/ui-components/controls/main-menu/menu.component.html
+++ b/src/app/ui-components/controls/main-menu/menu.component.html
@@ -1,5 +1,6 @@
-<div class="menu-bar">
-	<div class='section'>
+<mat-toolbar style="min-height: 45px;">
+  <mat-toolbar-row class="menu-bar">
+    <div class='section'>
 		<ul class='menu'>
 			<li class='menu-item' [matMenuTriggerFor]="file_menu">
 				File
@@ -13,7 +14,8 @@
 	<div class='section'>
 		<span id='branding'>Mobius v2.0</span>
 	</div>
-</div>
+  </mat-toolbar-row>
+</mat-toolbar>
 
 <mat-menu class="menu" #file_menu="matMenu" yPosition="above" [overlapTrigger]="false">
   <span mat-menu-item (click)="newfile()">New File</span>
