--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,70 +9,34 @@
 	margin: 0px;
 	padding: 0px;
 
-	display: flex;
+	display: flex; 
 	flex-direction: column;
-	justify-content: space-between;
-
-	background-color: $background-color;
-
-	.header{
-			
-		// refer to menu bar scss
-			
-	}
 
 	.container{
-
 		position: relative;
-
-		display: flex; 
-		flex-direction: column;
-
 		flex-grow: 1;
 
-		padding: $default-padding;
+		display: flex;
+		flex-direction: column; 
 
-		.split-panel{
-			position: relative;
-			flex-grow: 1; 
-			height: 100%; 
-		}
+		border-top: 1px solid gray;
+		background-color: #D8D8D8;
 
-		.viewport-wrapper{
-			display: flex;
-			flex-direction: row;
-			flex-grow: 1;
+		.wrapper{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+	
+			.split{
+				height: 100%;
+				flex-grow: 1; 
+			}
 
-			position: relative;
-		}
-		
-		.toggle-view-bar{
-			display: flex; 
-			flex-direction: column; 
-			justify-content: start;
-
-			width: 45px;
-			background-color: #E7E7E7;
-			margin-right: 15px;
-			margin-top: 30px;
-
-			.btn{
-				margin: 7.5px; 
-				height: 30px; 
-				width: 30px; 
-				font-size: 18px;
-				line-height: 30px;
-				text-align: center;
-				display: inline-block;
-				border: 1px solid gray;
-				cursor: pointer;
-
-				&.active{
-					color: white; 
-					background-color: gray;
-				}	
+			.split-area{
+				overflow: hidden;
 			}
 		}
+
 	}
 
 }
