--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -82,114 +82,150 @@
 			position: absolute;
 			z-index: 3;
 			margin: 0px;
-			min-width: 70px;
 
-			.node-body{
-				position: relative;
-				height: 60px;
-				border: 3px solid black;
-				border-radius: 10px;
-				background-color: white;
-				text-align: center;
-				cursor: move;
-				
+			.btn-container{
+			   position: absolute;
 
-				&.selected{
-					background-color: #A4EAA4;
-				}
+			   display: flex; 
+			   flex-direction: row; 
+			   justify-content: space-between;
 
-				.node-name{
-					font-family: sans-serif; 
-					font-size: 14px; 
-					line-height: 16px;
+			   width: 100%; 
+			   height: 110px; 
 
-				}
+			   .btn-group{
+			   		position: relative;
+			   		display: flex; 
+			   		flex-direction: column;
+			   	    width: 50%;
+					height: 100%; 
 
-				.edit{
-					cursor: pointer;
-					color: blue;
-					font-size: 12px;
-				}
-
-				
+					.action-button{
+						position: relative;
+						width: 100%; 
+						height: 50%;
+						border: 1px solid gray;
+						margin: 3px;
+						background-color: #bbb;
+					}
+			   }
 			}
 
-			.port-container{
-				display: flex; 
-				flex-direction: row; 
-				justify-content: space-around;
-
+			.node-wrapper{
 				position: relative;
-				height: 10px;
-				width: 100%;
-				z-index: 1;
+				margin: 20px; 
+				min-width: 70px;
+				display: flex; 
+				flex-direction: column;
+				justify-content: center;
 
-				margin-top: -2px;
-				
-				&.input{
+				.node-body{
+					position: relative;
+					height: 60px;
+					width: 100%;
+					border: 3px solid black;
+					border-radius: 10px;
+					background-color: white;
+					text-align: center;
+					cursor: move;
 
-					.port{
-						border-top-right-radius: 15px;
-						border-top-left-radius: 15px;
+					&.selected{
+						background-color: #A4EAA4;
 					}
-				}
 
-				&.output{
-
-					.port{
-						border-bottom-right-radius: 15px;
-						border-bottom-left-radius: 15px;
+					.node-name{
+						font-family: sans-serif; 
+						font-size: 14px; 
+						line-height: 60px;
 					}
 
-				}
-
-				.port{
-					height: 7.5px;
-					width: 15px;
-					border: 2px solid black;
-					border-radius: 50%;
-					display: inline-block;
-					background-color: black;
-					margin: 0px 2px;
-					
-					z-index: 3;
-
-					&:hover{
-						background-color: orange;
+					.edit{
 						cursor: pointer;
+						color: blue;
+						font-size: 12px;
 					}
-
-					&.connected{
-						background-color: green;
-					}
+	
+					
 				}
 
-				.btn-sm{
-					position: absolute; 
-					right: -15px;
-					border: 2px solid gray;
-					color: gray;
-					height: 15px; 
-					width: 15px;
-					font-size: 10px; 
-					line-height: 15px;
-					cursor: pointer;
+				.port-container{
+					display: flex; 
+					flex-direction: row; 
+					justify-content: space-around;
 
-					background: url('../../../../assets/img/plus.png');
-					background-size: cover;
+					position: relative;
+					height: 10px;
+					width: 100%;
+					z-index: 1;
 
-
+					margin-top: -2px;
+					
 					&.input{
-						top: -5px; 
+
+						.port{
+							border-top-right-radius: 15px;
+							border-top-left-radius: 15px;
+						}
 					}
 
 					&.output{
-						bottom: 0px; 
-						left: -15px;
-					}
-				}
 
+						.port{
+							border-bottom-right-radius: 15px;
+							border-bottom-left-radius: 15px;
+						}
+
+					}
+
+					.port{
+						height: 7.5px;
+						width: 15px;
+						border: 2px solid black;
+						border-radius: 50%;
+						display: inline-block;
+						background-color: black;
+						margin: 0px 2px;
+						
+						z-index: 3;
+
+						&:hover{
+							background-color: orange;
+							cursor: pointer;
+						}
+
+						&.connected{
+							background-color: green;
+						}
+					}
+
+					.btn-sm{
+						position: absolute; 
+						right: -15px;
+						border: 2px solid gray;
+						color: gray;
+						height: 15px; 
+						width: 15px;
+						font-size: 10px; 
+						line-height: 15px;
+						cursor: pointer;
+
+						background: url('../../../../assets/img/plus.png');
+						background-size: cover;
+
+
+						&.input{
+							top: -5px; 
+						}
+
+						&.output{
+							bottom: 0px; 
+							left: -15px;
+						}
+					}
+
+				}
 			}
+
 
 			&:active{
 				cursor: none;
@@ -202,59 +238,3 @@
 	
 }
 
-
-.dialog{
-	
-	display: flex; 
-	flex-direction: column; 
-
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	height: auto;
-	border: 1px solid gray;
-	background-color: #f7f7f7;
-
-	padding: 15px;
-
-	max-height: 600px;
-	width: 300px;
-	max-width: 300px;
-	overflow: auto;
-
-	.header{
-
-		.label{
-			font-size: 18px;
-			text-decoration: uppercase;
-			color: gray;
-		}
-
-		.content{
-			color: blue;
-			border-bottom: 1px dashed blue;
-			font-size: 14px;
-			margin-left: 10px;
-		}
-	}
-
-	.spacer{
-		width: 45px; 
-		height: 2px;
-		background-color: gray;
-	}
-
-	.close{
-		height: 30px;
-		width: 60px;
-		padding: 10px; 
-		font-size: 14px; 
-		text-align: center;
-	}
-
-	.row{
-		border: 1px solid #b9b0b0;
-		margin-bottom: 10px;
-		padding: 10px;
-	}
-}
