--- a/src/app/ui-components/viewers/code-viewer/code-viewer.component.html
+++ b/src/app/ui-components/viewers/code-viewer/code-viewer.component.html
@@ -1,15 +1,3 @@
 <div class="viewer">
-	
-	<div class="header">
-		
-		<div class="title">Code</div>
-
-		<div class="buttons"></div>
-
-	</div>
-
-	<div class="container">
-		<div ace-editor [(text)]="code" style='min-height: 300px;'></div>
-	</div>
-
+	<div class="ace-editor" ace-editor [(text)]="code"></div>
 </div>
