--- a/src/scss/_viewers.scss
+++ b/src/scss/_viewers.scss
@@ -1,55 +1,53 @@
-$header-height: 30px; 
-
 .viewer{
 
-	width: 100%; 
-	overflow: auto;
-	
-	padding: 0px;
-	margin: 0px;
+/* 	width: 100%; 
+overflow: auto;
 
-	.header{
+padding: 0px;
+margin: 0px;
 
-		display: flex; 
-		flex-direction: row; 
-		justify-content: space-between;
+.header{
 
-		position: relative;
-		font-size: 14px; 
-		font-weight: 600; 
-		line-height: $header-height;
-		text-transform: uppercase;
-		letter-spacing: 1.5px;
-		height: $header-height;
+	display: flex; 
+	flex-direction: row; 
+	justify-content: space-between;
 
-		color: #ADADAD;
+	position: relative;
+	font-size: 14px; 
+	font-weight: 600; 
+	line-height: $header-height;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+	height: $header-height;
 
-		.btn-group{
-			height: $header-height; 
+	color: #ADADAD;
 
-			button{
-				width: 0.9*$header-height; 
-				height: 0.9*$header-height; 
-				margin: 0px;
-				border: 1px solid #B4B1B1;
-				box-shadow: none;
+	.btn-group{
+		height: $header-height; 
 
-				&:focus{
-					
-				}
+		button{
+			width: 0.9*$header-height; 
+			height: 0.9*$header-height; 
+			margin: 0px;
+			border: 1px solid #B4B1B1;
+			box-shadow: none;
+
+			&:focus{
+				
 			}
-			
 		}
-
+		
 	}
 
-	.container{
-	}
+}
 
-	button{
-		&:focus{
-			
-		}
+.container{
+}
+
+button{
+	&:focus{
+		
 	}
+} */
 
 }
