--- a/src/scss/_viewers.scss
+++ b/src/scss/_viewers.scss
@@ -1,5 +1,13 @@
 .viewer{
 
+
+
+	.default{
+		font-size: 14px;
+		color: gray;
+		line-height: 150px;
+		text-align: center;
+	}
 /* 	width: 100%; 
 overflow: auto;
 
