--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.scss
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.scss
@@ -3,12 +3,14 @@
 .viewer{
 	@extend .viewer;
 
+	display: flex;
+	flex-direction: column;
+
 	.port-heading{
-		display: inline-block;
-		font-size: 14px;
-		line-height: 24px;
+		font-size: 18px;
+		line-height: 36px;
 		padding: 0px 4px;
-		border: 1px solid #777;
+		text-align: center;
 	}
 
 	.port{
@@ -38,7 +40,7 @@
 					text-transform: uppercase;
 					font-size: 10px; 
 					color: gray; 
-					min-width: 50px;
+					width: 100px;
 				}
 
 				.content{
